--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "babel-preset-es2015": "^6.9.0",
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
+    "gulp-flowtype": "^0.4.9",
     "gulp-mocha": "^2.2.0",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.7",
     "mocha": "^2.5.3"
   },
   "scripts": {
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "test": "gulp test"
   },
   "author": "Vojta Tranta <vojta.tranta@gmail.com>",
