--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
   "name": "object-mapper",
   "version": "0.0.1",
+  "repository": "https://github.com/vojtatranta/object-mapper",
   "description": "Enables DB-like API over nested objects",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "directories": {
     "test": "gulp test"
   },
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
-    "gulp-flowtype": "^0.4.9",
     "gulp-mocha": "^2.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.7",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
+    "build": "rm -rf lib && babel src --out-dir lib",
+    "dev": "gulp",
+    "test": "gulp test",
+    "prepublish": "npm run build",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "test": "gulp test"
   },
