--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "object-mapper",
+  "name": "object-indexed-map",
   "version": "0.0.1",
   "repository": "https://github.com/vojtatranta/object-mapper",
   "description": "Enables DB-like API over nested objects",
