--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "ava": "^0.15.2",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
@@ -25,10 +26,25 @@
   "scripts": {
     "build": "rm -rf lib && babel src --out-dir lib",
     "dev": "gulp",
-    "test": "gulp test",
+    "test": "ava",
     "prepublish": "npm run build",
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "author": "Vojta Tranta <vojta.tranta@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "ava": {
+    "files": [
+      "test/*.test.js"
+    ],
+    "source": [
+      "**/*.{js,jsx}",
+      "!dist/**/*"
+    ],
+    "concurrency": 5,
+    "failFast": true,
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  }
 }
